Fix height dropdown buttons on mobile

--- a/src/Backend/Core/Layout/Sass/components/_action-bar.scss
+++ b/src/Backend/Core/Layout/Sass/components/_action-bar.scss
@@ -9,6 +9,10 @@
   .btn {
     padding: 2px 6px 3px;
   }
+
+  .btn-group .dropdown-toggle {
+    padding: 9px 6px 10px;
+  }
 }
 
 
